correctly centered all elements and wrapped text in info containers

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -28,17 +28,20 @@ img {
 /*solution*/
 .title {
   text-align: center;
+  margin-bottom: 32px;
 }
 
 .plants {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 52px;
 }
 
 .plant-one,
 .plant-two,
 .plant-three,
 .plant-four {
+  width: 200px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
